--- a/AbLogServer.Server/ab-log.Server.csproj
+++ b/AbLogServer.Server/ab-log.Server.csproj
@@ -5,6 +5,11 @@
 		<Nullable>enable</Nullable>
 		<ImplicitUsings>enable</ImplicitUsings>
 		<RootNamespace>ABLog</RootNamespace>
+		<GenerateDocumentationFile>True</GenerateDocumentationFile>
+	</PropertyGroup>
+
+	<PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+	  <DefineConstants>$(DefineConstants);DEMO</DefineConstants>
 	</PropertyGroup>
 
 	<ItemGroup>
