--- a/DBContextLib/db-context.csproj
+++ b/DBContextLib/db-context.csproj
@@ -21,5 +21,8 @@
 	<ItemGroup>
 	  <ProjectReference Include="..\SharedLib\shared-lib.csproj" />
 	</ItemGroup>
+	<ItemGroup>
+	  <Folder Include="Migrations\" />
+	</ItemGroup>
 	
 </Project>
