--- a/RazorLib/razor-lib.csproj
+++ b/RazorLib/razor-lib.csproj
@@ -14,6 +14,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
+		<PackageReference Include="AngleSharp" Version="1.0.3" />
 		<PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="6.0.16" />
 		<PackageReference Include="MudBlazor" Version="6.4.1" />
 		<PackageReference Include="Refit" Version="6.5.1" />
