--- a/RemoteClient/ab-log-rc.csproj
+++ b/RemoteClient/ab-log-rc.csproj
@@ -61,4 +61,19 @@
 		<ProjectReference Include="..\ServerLib\server-lib.csproj" />
 	</ItemGroup>
 
+	<ItemGroup>
+		<Content Update="Shared\NavMenu.razor">
+			<ExcludeFromSingleFile>true</ExcludeFromSingleFile>
+		</Content>
+	</ItemGroup>
+
+	<ItemGroup>
+		<Content Include="..\AbLogServer.Client\wwwroot\conf.json" Link="wwwroot\conf.json">
+			<CopyToOutputDirectory>Always</CopyToOutputDirectory>
+		</Content>
+		<Content Update="wwwroot\**">
+			<CopyToOutputDirectory>Always</CopyToOutputDirectory>
+		</Content>
+	</ItemGroup>
+
 </Project>
