--- a/AbLogServer.Server/appsettings.json
+++ b/AbLogServer.Server/appsettings.json
@@ -6,11 +6,5 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*",  
-  "Mqtt": {
-    "Server": "20ef5101a5024759aef5336235b24d8b.s1.eu.hivemq.cloud",
-    "Port": 8883,    
-    "MessageMaxSizeBytes": 4000000,
-    "ClientId": "server-debug"
-  }
+  "AllowedHosts": "*"
 }
