--- a/AbLogServer.Client/ab-log.Client.csproj
+++ b/AbLogServer.Client/ab-log.Client.csproj
@@ -5,7 +5,12 @@
 		<Nullable>enable</Nullable>
 		<ImplicitUsings>enable</ImplicitUsings>
 		<RootNamespace>ABLog</RootNamespace>
+		<ApplicationIcon>favicon.ico</ApplicationIcon>
 	</PropertyGroup>
+
+	<ItemGroup>
+	  <Content Include="favicon.ico" />
+	</ItemGroup>
 
 	<ItemGroup>
 		<PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="6.0.16" />
