--- a/AbLogServer.Server/ab-log.Server.csproj
+++ b/AbLogServer.Server/ab-log.Server.csproj
@@ -7,6 +7,7 @@
 		<RootNamespace>ABLog</RootNamespace>
 		<GenerateDocumentationFile>True</GenerateDocumentationFile>
 		<ApplicationIcon>favicon.ico</ApplicationIcon>
+		<ServerGarbageCollection>true</ServerGarbageCollection>
 	</PropertyGroup>
 
 	<PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
@@ -20,8 +21,8 @@
 	<ItemGroup>
 		<PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Server" Version="6.0.16" />
 		<PackageReference Include="Microsoft.Extensions.Hosting.Systemd" Version="7.0.0" />
-		<PackageReference Include="NLog" Version="5.2.1" />
-		<PackageReference Include="NLog.Web.AspNetCore" Version="5.3.1" />
+		<PackageReference Include="NLog" Version="5.2.2" />
+		<PackageReference Include="NLog.Web.AspNetCore" Version="5.3.2" />
 	</ItemGroup>
 
 	<ItemGroup>
