--- a/ServerLib/server-lib.csproj
+++ b/ServerLib/server-lib.csproj
@@ -9,9 +9,10 @@
 	</PropertyGroup>
 
 	<ItemGroup>
-		<PackageReference Include="HtmlAgilityPack" Version="1.11.48" />
+		<PackageReference Include="HtmlAgilityPack" Version="1.11.49" />
 		<PackageReference Include="MailKit" Version="4.1.0" />
 		<PackageReference Include="MQTTnet" Version="4.2.1.781" />
+		<PackageReference Include="Telegram.Bot" Version="19.0.0" />
 	</ItemGroup>
 
 	<ItemGroup>
