--- a/RemoteClient/ab-log-rc.csproj
+++ b/RemoteClient/ab-log-rc.csproj
@@ -136,9 +136,10 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<Content Include="..\AbLogServer.Client\wwwroot\conf.json" Link="wwwroot\conf.json">
+		<EmbeddedResource Include="..\AbLogServer.Client\wwwroot\conf.json" Link="conf.json">
 			<CopyToOutputDirectory>Always</CopyToOutputDirectory>
-		</Content>
+		</EmbeddedResource>
+		<Resource Include="libman.json" />
 		<Content Include="Platforms\Windows\res\ab-log.big.scale-100.png" />
 		<Content Include="Platforms\Windows\res\ab-log.big.scale-125.png" />
 		<Content Include="Platforms\Windows\res\ab-log.big.scale-150.png" />
@@ -194,9 +195,25 @@
 		<Content Include="Platforms\Windows\res\BadgeLogo.scale-150.png" />
 		<Content Include="Platforms\Windows\res\BadgeLogo.scale-200.png" />
 		<Content Include="Platforms\Windows\res\BadgeLogo.scale-400.png" />
+		<EmbeddedResource Include="wwwroot\favicon.ico" />
 		<Content Update="wwwroot\**">
 			<CopyToOutputDirectory>Always</CopyToOutputDirectory>
 		</Content>
+	</ItemGroup>
+
+	<ItemGroup>
+	  <Compile Update="Properties\Resources.Designer.cs">
+	    <DesignTime>True</DesignTime>
+	    <AutoGen>True</AutoGen>
+	    <DependentUpon>Resources.resx</DependentUpon>
+	  </Compile>
+	</ItemGroup>
+
+	<ItemGroup>
+	  <EmbeddedResource Update="Properties\Resources.resx">
+	    <Generator>ResXFileCodeGenerator</Generator>
+	    <LastGenOutput>Resources.Designer.cs</LastGenOutput>
+	  </EmbeddedResource>
 	</ItemGroup>
 
 </Project>
