--- a/SharedLib/shared-lib.csproj
+++ b/SharedLib/shared-lib.csproj
@@ -13,6 +13,7 @@
   </ItemGroup>
 
 	<ItemGroup>
+		<PackageReference Include="AngleSharp" Version="1.0.4" />
 		<PackageReference Include="Microsoft.EntityFrameworkCore.Abstractions" Version="7.0.9" />
 		<PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
 	</ItemGroup>
