--- a/AbLogServer.Client/ab-log.Client.csproj
+++ b/AbLogServer.Client/ab-log.Client.csproj
@@ -6,6 +6,14 @@
 		<ImplicitUsings>enable</ImplicitUsings>
 		<RootNamespace>ABLog</RootNamespace>
 		<ApplicationIcon>favicon.ico</ApplicationIcon>
+		<VersionPrefix>3</VersionPrefix>
+		<VersionSuffix>beta</VersionSuffix>
+		<Version>$(VersionPrefix).0.0-$(VersionSuffix)</Version>
+		<Copyright>open source</Copyright>
+		<Description>Клиент ab-log (неофициальный)</Description>
+		<PackageProjectUrl>https://github.com/badhitman/AbLog</PackageProjectUrl>
+		<RepositoryUrl>https://github.com/badhitman/AbLog</RepositoryUrl>
+		<PackageReadmeFile>README.md</PackageReadmeFile>
 	</PropertyGroup>
 
 	<ItemGroup>
@@ -31,6 +39,13 @@
 
 	<ItemGroup>
 	  <Content Update="wwwroot\**;" CopyToOutputDirectory="Always" />
+	</ItemGroup>
+
+	<ItemGroup>
+	  <None Update="README.md">
+	    <Pack>True</Pack>
+	    <PackagePath>\</PackagePath>
+	  </None>
 	</ItemGroup>
 
 </Project>
