--- a/AbLogServer.Server/ab-log.Server.csproj
+++ b/AbLogServer.Server/ab-log.Server.csproj
@@ -8,6 +8,14 @@
 		<GenerateDocumentationFile>True</GenerateDocumentationFile>
 		<ApplicationIcon>favicon.ico</ApplicationIcon>
 		<ServerGarbageCollection>true</ServerGarbageCollection>
+		<VersionPrefix>3</VersionPrefix>
+		<VersionSuffix>beta</VersionSuffix>
+		<Version>$(VersionPrefix).0.0-$(VersionSuffix)</Version>
+		<Copyright>open source</Copyright>
+		<Description>Клиент ab-log (неофициальный)</Description>
+		<PackageProjectUrl>https://github.com/badhitman/AbLog</PackageProjectUrl>
+		<RepositoryUrl>https://github.com/badhitman/AbLog</RepositoryUrl>
+		<PackageReadmeFile>README.md</PackageReadmeFile>
 	</PropertyGroup>
 
 	<PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
@@ -23,7 +31,7 @@
 		<PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Server" Version="6.0.20" />
 		<PackageReference Include="Microsoft.Extensions.Hosting.Systemd" Version="7.0.0" />
 		<PackageReference Include="NLog" Version="5.2.3" />
-		<PackageReference Include="NLog.Web.AspNetCore" Version="5.3.2" />
+		<PackageReference Include="NLog.Web.AspNetCore" Version="5.3.3" />
 	</ItemGroup>
 
 	<ItemGroup>
