--- a/RazorLib/razor-lib.csproj
+++ b/RazorLib/razor-lib.csproj
@@ -6,6 +6,7 @@
 		<ImplicitUsings>enable</ImplicitUsings>
 		<RootNamespace>RazorLib</RootNamespace>
 		<GenerateDocumentationFile>True</GenerateDocumentationFile>
+		<VersionPrefix>3</VersionPrefix>
 	</PropertyGroup>
 
 
