--- a/old.v3/AbLogServer.Client/ab-log.Client.csproj
+++ b/old.v3/AbLogServer.Client/ab-log.Client.csproj
@@ -30,7 +30,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<ProjectReference Include="..\RazorLib\razor-lib.csproj" />
+		<ProjectReference Include="..\..\RazorLib\razor-lib.csproj" />
 	</ItemGroup>
 
 	<ItemGroup>
