--- a/old.v3/ab-log-rc/ab-log-rc.csproj
+++ b/old.v3/ab-log-rc/ab-log-rc.csproj
@@ -37,7 +37,7 @@
 		<PackageReference Include="NLog.Targets.MauiLog" Version="5.2.1" />
 		<PackageReference Include="Refit" Version="7.0.0" />
 		<PackageReference Include="Refit.HttpClientFactory" Version="7.0.0" />
-		<PackageReference Include="Microsoft.Maui.Controls" Version="8.0.3" />
+		<PackageReference Include="Microsoft.Maui.Controls" Version="8.0.6" />
 		<PackageReference Include="Microsoft.AspNetCore.Components.WebView.Maui" Version="8.0.3" />
 	</ItemGroup>
 
@@ -115,8 +115,8 @@
 		<None Remove="Platforms\Windows\res\BadgeLogo.scale-150.png" />
 		<None Remove="Platforms\Windows\res\BadgeLogo.scale-200.png" />
 		<None Remove="Platforms\Windows\res\BadgeLogo.scale-400.png" />
-		<ProjectReference Include="..\RazorLib\razor-lib.csproj" />
-		<ProjectReference Include="..\ServerLib\server-lib.csproj" />
+		<ProjectReference Include="..\..\RazorLib\razor-lib.csproj" />
+		<ProjectReference Include="..\..\ServerLib\server-lib.csproj" />
 		<EmbeddedResource Include="..\AbLogServer.Client\wwwroot\conf.json" Link="conf.json">
 			<CopyToOutputDirectory>Always</CopyToOutputDirectory>
 		</EmbeddedResource>
