--- a/ab-log-rc/ab-log-rc.csproj
+++ b/ab-log-rc/ab-log-rc.csproj
@@ -32,6 +32,7 @@
 	</PropertyGroup>
 
 	<ItemGroup>
+		<PackageReference Include="Microsoft.Extensions.Http" Version="8.0.0" />
 		<PackageReference Include="MudBlazor" Version="6.16.0" />
 		<PackageReference Include="NLog" Version="5.2.8" />
 		<PackageReference Include="NLog.Targets.MauiLog" Version="8.0.0" />
