--- a/ab-log.web/nlog.config
+++ b/ab-log.web/nlog.config
@@ -29,6 +29,7 @@
 		<!--All logs, including from Microsoft-->
 		<logger name="*" minlevel="Trace" writeTo="allfile" />
 
+		<logger name="MudBlazor.*" finalMinLevel="Info" />
 		<logger name="System.*" finalMinLevel="Warn" />
 		<logger name="Microsoft.*" finalMinLevel="Warn" />
 		<logger name="Microsoft.Hosting.Lifetime*" finalMinLevel="Info" />
