--- a/ab-log.web/ab-log.web.csproj
+++ b/ab-log.web/ab-log.web.csproj
@@ -7,7 +7,7 @@
 		<RootNamespace>ABLogWeb</RootNamespace>
 		<VersionPrefix>4</VersionPrefix>
 		<Version>$(VersionPrefix).0.1$(VersionSuffix)</Version>
-		<VersionSuffix>alfa</VersionSuffix>
+		<VersionSuffix>-alfa</VersionSuffix>
 		<AssemblyName>$(AssemblyName.Replace(' ', '_'))</AssemblyName>
 		<GenerateDocumentationFile>True</GenerateDocumentationFile>
 		<Copyright>open source</Copyright>
