--- a/ab-log-rc/ab-log.app.csproj
+++ b/ab-log-rc/ab-log.app.csproj
@@ -11,7 +11,7 @@
 		<ImplicitUsings>enable</ImplicitUsings>
 		<EnableDefaultCssItems>false</EnableDefaultCssItems>
 		<VersionPrefix>4</VersionPrefix>
-		<VersionSuffix>-beta</VersionSuffix>
+		<VersionSuffix>-alfa</VersionSuffix>
 		<Version>$(VersionPrefix).0.1$(VersionSuffix)</Version>
 		<Copyright>open source</Copyright>
 		<Description>Клиент ab-log (неофициальный)</Description>
