--- a/ab-log.web/ab-log.service
+++ b/ab-log.web/ab-log.service
@@ -4,7 +4,7 @@ Description=AB-LOG App
 [Service]
 Type=notify
 WorkingDirectory=/srv/service/net8.0/ablog
-ExecStart=/usr/bin/dotnet /srv/service/net8.0/ablog/ab-log.Server.dll
+ExecStart=/usr/bin/dotnet /srv/service/net8.0/ablog/ab-log.web.dll
 
 # to query logs using journalctl, set a logical name here
 SyslogIdentifier=ABLog
