--- a/ab-log-rc/Platforms/Android/AndroidManifest.xml
+++ b/ab-log-rc/Platforms/Android/AndroidManifest.xml
@@ -3,5 +3,6 @@
 	<application android:allowBackup="true" android:supportsRtl="true" android:label="AB-Log: remote client"></application>
 	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 	<uses-permission android:name="android.permission.INTERNET" />
-	<uses-sdk android:minSdkVersion="27" android:targetSdkVersion="34" />
+	<uses-permission android:name="android.permission.MANAGE_DOCUMENTS" />
+	<uses-permission android:name="android.permission.MANAGE_EXTERNAL_STORAGE" />
 </manifest>
