--- a/ab-log-rc/ab-log.app.csproj
+++ b/ab-log-rc/ab-log.app.csproj
@@ -66,7 +66,7 @@
 		<EmbeddedResource Include="..\ab-log.web\conf.json" Link="conf.json">
 			<CopyToOutputDirectory>Always</CopyToOutputDirectory>
 		</EmbeddedResource>
-		<Content Include="Platforms\Windows\res\**" />		
+		<Content Include="Platforms\Windows\res\**" />
 		<EmbeddedResource Include="wwwroot\favicon.ico" />
 		<Content Update="wwwroot\**">
 			<CopyToOutputDirectory>Always</CopyToOutputDirectory>
@@ -84,7 +84,8 @@
 	</ItemGroup>
 
 	<ItemGroup>
-	  <PackageReference Update="Microsoft.Maui.Controls.Compatibility" Version="8.0.70" />
+		<PackageReference Update="Microsoft.Maui.Controls.Compatibility" Version="8.0.70" />
+		<PackageReference Include="Microsoft.Web.LibraryManager.Build" Version="3.0.71" />
 	</ItemGroup>
 
 </Project>
